fix layout on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,4 +104,7 @@
   .h-screen {
     height: -webkit-fill-available;
   }
+  .max-h-screen {
+    max-height: -webkit-fill-available;
+  }
 }
